⚙️ TheMob v1.7 – Automation, Scaling & System Transparency